Project Structure Update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,32 @@
-[package]
-name = "flashblocks"
-description = "Next-Gen Optimism L2 Block Builder"
+[workspace]
+members = [
+  ".",            # The main rblib library
+  "tools/fbutil",
+]
+resolver = "2"
+
+
+[workspace.package]
 license = "MIT"
 version = "1.0.0"
 edition = "2024"
 rust-version = "1.87"
+repository = "https://github.com/flashbots/flashblocks"
 homepage = "https://github.com/flashbots/flashblocks"
 authors = ["Flashbots <info@flashbots.net>"]
 exclude = [".github/"]
+
+[package]
+name = "flashblocks"
+description = "Next-Gen Optimism L2 Block Builder"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+authors.workspace = true
+exclude.workspace = true
 
 [features]
 default = ["jemalloc"]
