--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ default = ["jemalloc"]
 jemalloc = ["rblib/jemalloc"]
 
 [dependencies]
-rblib = { git = "ssh://git@github.com/flashbots/rblib.git", tag = "v0.3.1" }
+rblib = { git = "https://github.com/flashbots/rblib.git", tag = "v0.3.1" }
 
 
 futures = "0.3"
@@ -70,7 +70,7 @@ reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0
 reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 
 [dev-dependencies]
-rblib = { git = "ssh://git@github.com/flashbots/rblib.git", tag = "v0.3.1", features = [
+rblib = { git = "https://github.com/flashbots/rblib.git", tag = "v0.3.1", features = [
   "test-utils",
 ] }
 
