rename block_number to flashblock_number where relevant

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 
 [dev-dependencies]
 rblib = { git = "https://github.com/flashbots/rblib", rev = "9e9b93a601a4cb1a1dd5ddd3952b09ab145d3e93", features = [
