--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-  ".",            # The main rblib library
-  "tools/fbutil",
+    ".", # The main rblib library
+    "tools/fbutil",
 ]
 resolver = "2"
 
@@ -31,10 +31,10 @@ exclude.workspace = true
 [features]
 default = ["jemalloc"]
 jemalloc = ["rblib/jemalloc"]
+debug = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]
 
 [dependencies]
 rblib = { git = "https://github.com/flashbots/rblib", rev = "9e9b93a601a4cb1a1dd5ddd3952b09ab145d3e93" }
-
 
 futures = "0.3"
 tokio = "1.46"
@@ -44,7 +44,6 @@ eyre = "0.6"
 moka = "0.12"
 tracing = "0.1"
 clap = { version = "4.4", features = ["derive", "env", "string"] }
-
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9.33"
@@ -71,9 +70,12 @@ reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.
 reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
 
+# debug flag
+console-subscriber = { version = "0.4", optional = true }
+
 [dev-dependencies]
 rblib = { git = "https://github.com/flashbots/rblib", rev = "9e9b93a601a4cb1a1dd5ddd3952b09ab145d3e93", features = [
-  "test-utils",
+    "test-utils",
 ] }
 
 dashmap = "6.1"
