--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ resolver = "2"
 license = "MIT"
 version = "1.0.0"
 edition = "2024"
-rust-version = "1.87"
+rust-version = "1.91"
 repository = "https://github.com/flashbots/unichain-builder"
 homepage = "https://github.com/flashbots/unichain-builder"
 authors = ["Flashbots <info@flashbots.net>"]
@@ -34,7 +34,7 @@ jemalloc = ["rblib/jemalloc"]
 debug = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]
 
 [dependencies]
-rblib = { git = "https://github.com/flashbots/rblib", rev = "66c5c15a8834a6f677bec0d6b34f54ffc7cdd4ff" }
+rblib = { git = "https://github.com/flashbots/rblib", tag = "v0.4.1" }
 
 futures = "0.3"
 tokio = "1.46"
@@ -60,24 +60,24 @@ atomic-time = "0.1"
 secp256k1 = "0.30"
 jsonrpsee = "0.26.0"
 
-alloy-json-rpc = "1.0.37"
-alloy-serde = "1.0.37"
+alloy-json-rpc = "1.0.41"
+alloy-serde = "1.0.41"
 
 
 # reth dependencies
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
-reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
-reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
-reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
-reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
+reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
+reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
+reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
+reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
+reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
 
 # debug flag
 console-subscriber = { version = "0.4", optional = true }
 tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
-rblib = { git = "https://github.com/flashbots/rblib", rev = "66c5c15a8834a6f677bec0d6b34f54ffc7cdd4ff", features = [
+rblib = { git = "https://github.com/flashbots/rblib", tag = "v0.4.1", features = [
     "test-utils",
 ] }
 
