--- a/tools/fbutil/Cargo.toml
+++ b/tools/fbutil/Cargo.toml
@@ -13,19 +13,21 @@ exclude.workspace = true
 [dependencies]
 unichain-builder = { path = "../.." }
 
-futures = "0.3"
-tokio = "1.46"
-tokio-tungstenite = "0.27"
-clap = { version = "4.4", features = ["derive", "env", "string"] }
-tracing = "0.1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-eyre = "0.6"
-url = "2.5.2"
-rand = "0.9"
-humantime = "2.2"
-# alloy = { version = "1.0.25", features = ["full"] }
-# op-alloy = { version = "0.19", features = ["full"] }
+rollup-boost-types = { workspace = true }
+
+futures = { workspace = true }
+tokio = { workspace = true }
+tokio-tungstenite = { workspace = true }
+clap = { workspace = true }
+tracing = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+eyre = { workspace = true }
+url = { workspace = true }
+rand = { workspace = true }
+humantime = { workspace = true }
+
+# fbutil-specific dependencies
 human_format = "1.1.0"
 color-eyre = "0.6"
 chrono = "0.4.41"
