--- a/tools/fbutil/Cargo.toml
+++ b/tools/fbutil/Cargo.toml
@@ -11,7 +11,7 @@ authors.workspace = true
 exclude.workspace = true
 
 [dependencies]
-rollup-boost-types = { workspace = true }
+rblib = { workspace = true }
 
 futures = { workspace = true }
 tokio = { workspace = true }
