--- a/.github/workflows/unichain_builder_release.yaml
+++ b/.github/workflows/unichain_builder_release.yaml
@@ -21,6 +21,7 @@ on:
         description: "Binary Compilation Features"
         options:
           - ""
+          - "debug"
         required: false
         type: choice
 
